--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-description: Daniel Tamming's data science portfolio
+title: Daniel Tamming's Data Science Portfolio
+description: Currently Under Construction
