--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Daniel Tamming's Data Science Portfolio
+title: danitamm.github.io
 description: Currently Under Construction
