--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: danitamm.github.io
-# description: Currently Under Construction
+description: Daniel Tamming's Data Science Porfolio
