--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: danitamm.github.io
-description: Daniel Tamming's Data Science Porfolio
+title: Daniel Tamming's Data Science Porfolio
+description: danitamm.github.io
