--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Daniel Tamming's Data Science Porfolio
-# description: danieltamming.github.io
+title: Data Science Porfolio
+description: Daniel Tamming
